--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@
   transition: transform 0.4s ease-out;
 }
 
-.category-card {
+.category-cards {
   position: relative;
   width: 100%;
   height: 350px;
@@ -1195,7 +1195,7 @@
   transform: scale(1.02);
 }
 
-.category-card img {
+.category-cards img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -1222,7 +1222,7 @@
 
 /* Mobile: 1 card visible */
 @media (max-width: 767px) {
-  .category-card {
+  .category-cards {
     width: 320px;
     height: 350px;
   }
@@ -1233,7 +1233,7 @@
 
 /* Tablet: 2 cards visible */
 @media (min-width: 768px) and (max-width: 1023px) {
-  .category-card {
+  .category-cards {
     width: 350px;
     height: 400px;
   }
@@ -1244,7 +1244,7 @@
 
 /* Desktop: 3 cards visible */
 @media (min-width: 1024px) {
-  .category-card {
+  .category-cards {
     width: 380px;
     height: 450px;
   }
@@ -1368,7 +1368,7 @@
 
 
 <!-- ===== ELECTRONICS CATEGORY CARDS SECTION ===== -->
-<section class="category-cards-section animate-on-scroll " id="category-cards" data-animation="fade-up">
+<section class="category-cards-section animate-on-scroll" id="category-cards" data-animation="fade-up">
     <div class="cards-container">
         <!-- Card 1: Phones -->
         <div class="category-card" data-category="phones">
@@ -1566,7 +1566,7 @@
         <div class="carousel-wrapper">
 
             <!-- Card 1 -->
-            <a href="/shop/womens" class="category-card">
+            <a href="/shop/womens" class="category-cards">
                 <img src="Images/IMG-20251018-WA0002.jpg" alt="Shop Womens" />
                 <div class="card-overlay">
                     <h3>Shop Womens</h3>
@@ -1574,7 +1574,7 @@
             </a>
 
             <!-- Card 2 -->
-            <a href="/shop/mens" class="category-card">
+            <a href="/shop/mens" class="category-cards">
                 <img src="Images/IMG-20251018-WA0006.jpg" alt="Shop Mens" />
                 <div class="card-overlay">
                     <h3>Shop Mens</h3>
@@ -1582,21 +1582,21 @@
             </a>
 
             <!-- Card 3 -->
-            <a href="/shop/sports" class="category-card">
+            <a href="/shop/sports" class="category-cards">
                 <img src="Images/IMG-20251018-WA0003.jpg" alt="Shop Sports" />
                 <div class="card-overlay">
                     <h3>Kids</h3>
                 </div>
             </a>
             <!-- Card 4 -->
-            <a href="/shop/sports" class="category-card">
+            <a href="/shop/sports" class="category-cards">
                 <img src="Images/IMG-20251018-WA0022.jpg" alt="Shop Sports" />
                 <div class="card-overlay">
                     <h3>Gyms</h3>
                 </div>
             </a>
             <!-- Card 5 -->
-            <a href="/shop/sports" class="category-card">
+            <a href="/shop/sports" class="category-cards">
                 <img src="Images/IMG-20251018-WA0018.jpg" alt="Shop Sports" />
                 <div class="card-overlay">
                     <h3>Smart Watches</h3>
